@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.458 2007/01/23 11:01:09 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.459 2007/01/23 12:22:00 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -40,6 +40,11 @@ PH/06 Some tidies to the infrastructure of the Test Suite that is concerned
       to be defined when compiling on OSX (Darwin); (2) Tidies to the Makefile,
       including adding "make clean"; (3) Added -fPIC when compiling the test
       dynamically loaded module, to get rid of a warning.
+
+PH/07 There was a bug in the dovecot authenticator such that the value of
+      $auth1 could be overwritten, and so not correctly preserved, after a
+      successful authentication. This usually meant that the value preserved by
+      the server_setid option was incorrect.
 
 
 Exim version 4.66
